--- a/layouts/main.html
+++ b/layouts/main.html
@@ -164,7 +164,8 @@ $layout_dateline ||= begin
           This work is licensed under the Creative Commons Attribution 2.0 Belgium Licence.<br/>
           To view a copy of this licence, visit
           <a class="quiet" rel="license" href="http://creativecommons.org/licenses/by/2.0/be/deed.en">http://creativecommons.org/licenses/by/2.0/be/deed.en</a><br/>
-          or send a letter to Creative Commons, 444 Castro Street, Suite 900, Mountain View, California, 94041, USA.
+          or send a letter to Creative Commons, 444 Castro Street, Suite 900, Mountain View, California, 94041, USA.<br />
+          All content such as talks and biographies is the sole responsibility of the speaker.
         </div>
       </div>
     </div>
