--- a/layouts/schedule/room.html
+++ b/layouts/schedule/room.html
@@ -11,7 +11,7 @@
   %>
   <li><i class="icon-th"></i> <strong>Building</strong>: <a href="<%= building_path %>#<%= building.downcase %>"><%= building %></a></li>
 <% end %>
-  <li><i class="icon-map-marker"></i> <strong>Location</strong>: <a href="https://nav.fosdem.org/l/<%= item[:conference_room] %>/">
+  <li><i class="icon-map-marker"></i> <strong>Location</strong>: <a href="https://nav.fosdem.org/l/<%= item[:slug] %>/">
     <%= item[:conference_room] %>
   </a></li>
 </ul>
