content, layout: remove URI.escape/encode
This has been deprecated, and it is probably redundant here anyway. See here:
https://github.com/ruby/ruby/commit/238b979f1789f95262a267d8df6239806f2859cc

--- a/layouts/schedule/event.html
+++ b/layouts/schedule/event.html
@@ -42,7 +42,7 @@
              next
            end
     require 'uri'
-    url = URI.encode video
+    url = video
 %>
 <div class="video">
   <video preload="none" controls="controls">
