Adjust wording for the online edition

--- a/layouts/main.html
+++ b/layouts/main.html
@@ -64,7 +64,7 @@ $layout_dateline ||= begin
         <div class="holder">
           <div class="frame">
             <div class="text-block">
-              <h2>Brussels <span>/</span> <strong><%= $layout_dateline %></strong></h2>
+              <h2>Onlines <span>/</span> <strong><%= $layout_dateline %></strong></h2>
               <a class="btn-purple" href="<%= pathof '/schedule/' %>">schedule</a>
             </div>
             <ul class="navbar">
@@ -114,7 +114,7 @@ $layout_dateline ||= begin
             <div class="info-box">
               <div class="holder">
                 <div class="frame">
-                  Brussels <span>/</span> <strong><%= $layout_dateline %></strong> <a class="btn-purple" href="<%= pathof '/schedule/' %>">schedule</a>
+                  Online <span>/</span> <strong><%= $layout_dateline %></strong> <a class="btn-purple" href="<%= pathof '/schedule/' %>">schedule</a>
                 </div>
               </div>
             </div>
@@ -157,7 +157,7 @@ $layout_dateline ||= begin
         <div class="company-info">
           <div class="company-info-logo"></div>
           <strong class="logo-small"><a href="<%= pathof '/schedule/' %>"><%= conference()[:acronym] %></a></strong>
-          <p>Brussels <span>/</span> <strong><%= $layout_dateline %></strong></p>
+          <p>Online <span>/</span> <strong><%= $layout_dateline %></strong></p>
         </div>
         <div class="license-info">
           <div class="license-info-logo"></div>
