--- a/layouts/main.html
+++ b/layouts/main.html
@@ -64,7 +64,7 @@ $layout_dateline ||= begin
         <div class="holder">
           <div class="frame">
             <div class="text-block">
-              <h2>Onlines <span>/</span> <strong><%= $layout_dateline %></strong></h2>
+              <h2>Online <span>/</span> <strong><%= $layout_dateline %></strong></h2>
               <a class="btn-purple" href="<%= pathof '/schedule/' %>">schedule</a>
             </div>
             <ul class="navbar">
