--- a/layouts/schedule/room.html
+++ b/layouts/schedule/room.html
@@ -2,6 +2,7 @@
 # vim: set ts=2 sw=2 et ai ft=eruby:
 # encoding: utf-8
 %>
+<% go_live = @site.config.fetch(:go_live) %>
 <ul class="side-box">
   <li><i class="icon-user"></i> <strong>Capacity</strong>: <%= item[:size] %></li>
 <%
@@ -14,6 +15,24 @@
   <li><i class="icon-map-marker"></i> <strong>Location</strong>: <a href="https://nav.fosdem.org/l/<%= item[:slug] %>/">
     <%= item[:conference_room] %>
   </a></li>
+  <% if ! is_stand(item[:slug]) %>
+  <li>
+    <i class="icon-facetime-video"></i> <strong>Live stream</strong>:
+    <% if ! go_live %>
+    <span class="muted">Stream has not been set up yet</span>
+    <% else %>
+    <a href="<%= stream_link(item) %>"><%= item[:conference_room] %></a>
+    <% end %>
+  </li>
+  <% end %>
+  <li>
+    <i class="icon-comment"></i> <strong>Chat</strong>:
+    <% if ! go_live %>
+    <span class="muted">We're not quite ready yet</span>
+    <% else %>
+    <a href="<%= stream_link(item) %>">Join the conversation!</a>
+    <% end %>
+  </li>
 </ul>
 <br style="clear: both;"/>
 <%
