--- a/layouts/schedule/track.html
+++ b/layouts/schedule/track.html
@@ -21,7 +21,7 @@
 <% if ! is_stand(item[:rooms][0]) %>
 <i class="icon-facetime-video"></i> <strong>Live stream</strong>:
 <% if item[:rooms].empty? || ! go_live %>
-<span class="muted">Stream has not been set up yet</span>
+<span class="muted">We're not quite ready yet</span>
 <% else %>
 <a href="<%= stream_link(item) %>"><%= fancy_room_name(item[:rooms][0]) %></a>
 <% end %>
@@ -31,7 +31,7 @@
 <% if item[:rooms].empty? || ! go_live %>
 <span class="muted">We're not quite ready yet</span>
 <% else %>
-<a href="<%= stream_link(item) %>">Join the conversation!</a>
+<a href="<%= stream_link(item, is_chat=true) %>">Join the conversation!</a>
 <% end %>
 </p>
 <br style="clear: both;"/>
