--- a/layouts/schedule/room.html
+++ b/layouts/schedule/room.html
@@ -19,7 +19,7 @@
   <li>
     <i class="icon-facetime-video"></i> <strong>Live stream</strong>:
     <% if ! go_live %>
-    <span class="muted">Stream has not been set up yet</span>
+    <span class="muted">We're not quite ready yet</span>
     <% else %>
     <a href="<%= stream_link(item) %>"><%= item[:conference_room] %></a>
     <% end %>
@@ -30,7 +30,7 @@
     <% if ! go_live %>
     <span class="muted">We're not quite ready yet</span>
     <% else %>
-    <a href="<%= stream_link(item) %>">Join the conversation!</a>
+    <a href="<%= stream_link(item, is_chat=true) %>">Join the conversation!</a>
     <% end %>
   </li>
 </ul>
