--- a/layouts/schedule/event.html
+++ b/layouts/schedule/event.html
@@ -10,15 +10,26 @@
   <li><i class="icon-stop"></i> <strong>End</strong>: <%= ltt item, :end %></li>
   <% if is_stand(item[:room]) %>
     <li>
-      <i class="icon-picture"></i> <a href="https://stands.fosdem.org/stands/<%= link_schedule_to_stand(item[:room]) %>">Visit the stand</a>
+      <i class="icon-picture"></i>  <strong>Visit</strong>:
+      <a href="https://stands.fosdem.org/stands/<%= link_schedule_to_stand(item[:room]) %>">Visit the stand</a>
     </li>
   <% else %>
   <li>
-    <i class="icon-facetime-video"></i> <strong>Live stream</strong>:
+    <i class="icon-facetime-video"></i> <strong>Video with Q&A</strong>:
     <% if item[:room].nil? || ! go_live %>
     <span class="muted">We're not quite ready yet</span>
     <% else %>
     <a href="<%= stream_link(item) %>"><%= fancy_room_name(item[:room]) %></a>
+    <% end %>
+  </li>
+  <% end %>
+  <% if ! is_stand(item[:room]) %>
+  <li id="live-stream-with-q-and-a" class="visible-desktop">
+    <i class="icon-film"></i> <strong>Video only</strong>:
+    <% if item[:room].nil? || ! go_live %>
+    <span class="muted">We're not quite ready yet</span>
+    <% else %>
+    <a href="<%= stream_direct_link(item) %>"><%= fancy_room_name(item[:room]) %></a>
     <% end %>
   </li>
   <% end %>
@@ -50,7 +61,7 @@
 <% if is_stand(item[:room]) %>
   <div class="event-blurb">
     <div class="event-abstract">
-      <p>Visit the <%= item[:track] %> at <a href="https://stands.fosdem.org/stands/<%= link_schedule_to_stand(item[:room]) %>">stands.fosdem.org</a>.</p>
+      <p>Visit the <%= item[:title] %> at <a href="https://stands.fosdem.org/stands/<%= link_schedule_to_stand(item[:room]) %>">stands.fosdem.org</a>.</p>
     </div>
   </div>
 <% end %>
