Set matrix to false pending solving of issues

--- a/layouts/schedule/event.html
+++ b/layouts/schedule/event.html
@@ -2,6 +2,7 @@
 # vim: set ft=eruby ts=2 sw=2 et ai:
 %>
 <% go_live = @site.config.fetch(:go_live) %>
+<% matrix_works = @site.config.fetch(:matrix_works) %>
 <ul class="side-box">
   <li><i class="icon-road"></i> <strong>Track</strong>: <%= l track(item[:track]) %></li>
   <li><i class="icon-home"></i> <strong>Room</strong>: <%= l room(item[:room]) %></li>
@@ -16,7 +17,7 @@
   <% else %>
   <li>
     <i class="icon-facetime-video"></i> <strong>Video with Q&A</strong>:
-    <% if item[:room].nil? || ! go_live %>
+    <% if item[:room].nil? || ! go_live || ! matrix_works %>
     <span class="muted">We're not quite ready yet</span>
     <% else %>
     <a href="<%= stream_link(item) %>"><%= fancy_room_name(item[:room]) %></a>
@@ -35,7 +36,7 @@
   <% end %>
   <li>
     <i class="icon-comment"></i> <strong>Chat</strong>:
-    <% if item[:room].nil? || ! go_live %>
+    <% if item[:room].nil? || ! go_live || ! matrix_works %>
     <span class="muted">We're not quite ready yet</span>
     <% else %>
     <a href="<%= stream_link(item, is_chat=true) %>">Join the conversation!</a>
