--- a/layouts/schedule/room.html
+++ b/layouts/schedule/room.html
@@ -26,7 +26,7 @@
   <li id="live-stream-with-q-and-a" class="visible-desktop">
     <i class="icon-facetime-video"></i> <strong>Video with Q&A</strong>:
     <% if ! go_live || ! matrix_works %>
-    <span class="muted">We're not quite ready yet</span>
+    <span class="muted">We've hit a snag. The <i>Video only</i> link still works!</span>
     <% else %>
     <a href="<%= stream_link(item) %>"><%= item[:conference_room] %></a>
     <% end %>
@@ -45,7 +45,7 @@
   <li>
     <i class="icon-comment"></i> <strong>Chat</strong>:
     <% if ! go_live || ! matrix_works %>
-    <span class="muted">We're not quite ready yet</span>
+    <span class="muted">We've hit a snag. The <i>Video only</i> link still works!</span>
     <% else %>
     <a href="<%= stream_link(item, is_chat=true) %>">Join the conversation!</a>
     <% end %>
