--- a/layouts/schedule/track.html
+++ b/layouts/schedule/track.html
@@ -26,7 +26,7 @@
 <span class="visible-desktop">
   <i class="icon-facetime-video"></i> <strong>Video with Q&A</strong>:
   <% if item[:rooms].empty? || ! go_live || ! matrix_works %>
-  <span class="muted">We're not quite ready yet</span>
+  <span class="muted">We've hit a snag. The <i>Video only</i> link still works!</span>
   <% else %>
   <a href="<%= stream_link(item) %>"><%= fancy_room_name(item[:rooms][0]) %></a>
   <% end %>
@@ -45,7 +45,7 @@
 <% end %>
 <i class="icon-comment"></i> <strong>Chat</strong>:
 <% if item[:rooms].empty? || ! go_live || ! matrix_works %>
-<span class="muted">We're not quite ready yet</span>
+<span class="muted">We've hit a snag. The <i>Video only</i> link still works!</span>
 <% else %>
 <a href="<%= stream_link(item, is_chat=true) %>">Join the conversation!</a>
 <% end %>
