--- a/layouts/schedule/event.html
+++ b/layouts/schedule/event.html
@@ -16,7 +16,7 @@
     </li>
   <% else %>
   <li>
-    <i class="icon-facetime-video"></i> <strong>Video with Q&A</strong>:
+    <i class="icon-facetime-video"></i> <strong>Video with Q&amp;A</strong>:
     <% if item[:room].nil? || ! go_live || ! matrix_works %>
     <span class="muted">We've hit a snag. The <i>Video only</i> link still works!</span>
     <% else %>
