Streamline naming of CfP to participation

--- a/layouts/schedule/track.html
+++ b/layouts/schedule/track.html
@@ -185,7 +185,7 @@
     if cfp
 %>
 <div class="well well-small track-cfp">
-      <p>Read the Call for Papers at <a href="<%= cfp %>"><%= cfp %></a>.</p>
+      <p>Read the Call for Participation at <a href="<%= cfp %>"><%= cfp %></a>.</p>
 </div>
 <% end %>
 
