sponsors: improve layout and link positioning

--- a/content/assets/style/parts/010_design.css
+++ b/content/assets/style/parts/010_design.css
@@ -287,6 +287,8 @@ a.btn-purple:hover {
 }
 .logo-sponsor-cornerstone a {
 	display:block;
+	height: 100%;
+	margin-top: -10px;
 }
 .logo-sponsor-other a {
 	background:url(sprite.png) no-repeat;
