Add chat links to room pags

--- a/layouts/schedule/room.html
+++ b/layouts/schedule/room.html
@@ -37,7 +37,7 @@
     <% if ! go_live || ! matrix_works %>
     <span class="muted">We've hit a snag. The <i>Video only</i> link still works!</span>
     <% else %>
-    <a href="https://live.fosdem.org/watch/<%= item[:conference_room] %>">Join the conversation!</a>
+    <a href="<%= item[:chat_link] %>">Join the conversation!</a>
     <% end %>
   </li>
 </ul>
