--- a/layouts/schedule/event.html
+++ b/layouts/schedule/event.html
@@ -77,7 +77,7 @@
 <div class="video">
   <video preload="none" controls="controls">
     <source src="<%= url %>" type='video/webm; codecs="vp9, opus"' />
-    <source src="<%= url %>" type='video/mp4' />
+    <source src="<%= url.gsub(/\.webm$/, ".mp4") %>" type='video/mp4' />
   </video>
 </div>
 <% end %>
