Remove dependency on yaml files per file
To be used together with
https://github.com/FOSDEM/pretalx-integration/tree/master/pretalx-nanoc-yaml-exporter

--- a/layouts/schedule/event.html
+++ b/layouts/schedule/event.html
@@ -102,9 +102,8 @@
   <ul class="event-attachments unstyled">
     <%
       item[:attachments].each do |a|
-        ai = $item_by_id.fetch(a[:identifier])
-        title = a[:title] ? a[:title] : ai[:title]
-        icon = case ai[:media]
+        title = a[:title]
+        icon = case a[:media]
                when 'slides'
                  'list'
                when 'video'
@@ -117,7 +116,7 @@
                  'download'
                end
       %>
-      <li><i class="icon-<%= icon %>"></i> <a href="<%= ai.path %>"><%= title %> (<%= ai[:type] %>)</a></li>
+      <li><i class="icon-<%= icon %>"></i> <a href="<%= a[:file] %>"><%= title %> (<%= a[:type] %>)</a></li>
     <% end %>
   </ul>
 <% end %>
