--- a/layouts/schedule/speaker.html
+++ b/layouts/schedule/speaker.html
@@ -12,7 +12,7 @@
   The speaker description is potentially outdated as it is from a previous FOSDEM edition.
   </p>
 <% end %>
-<%= item[:abstract] %>
+<%= Kramdown::Document.new(item[:abstract], { auto_ids: false, header_offset: 2 }).to_html %>
 <%= item[:description] %>
 
 <% if photo %>
