Revert "Convert abstract markdown to html"
This reverts commit a33b3b5bad061d4ba10222cc73c5af7ab665356c.

Conversion is now done in pretalx export (also for biography)

--- a/layouts/schedule/speaker.html
+++ b/layouts/schedule/speaker.html
@@ -12,7 +12,7 @@
   The speaker description is potentially outdated as it is from a previous FOSDEM edition.
   </p>
 <% end %>
-<%= Kramdown::Document.new(item[:abstract], { auto_ids: false, header_offset: 2 }).to_html %>
+<%= item[:abstract] %>
 <%= item[:description] %>
 
 <% if photo %>
