Correct number of events
We count the number of specific events, I don't see how adding 1 makes any sense here.

--- a/layouts/main.html
+++ b/layouts/main.html
@@ -86,7 +86,7 @@ $layout_dateline ||= begin
           <ul class="visual-panel">
             <%
               $eventcount ||= begin
-				s = events.select{|e| e[:type] != 'certification' && e[:type] != 'keysigning' && e[:type] != 'bof'}.count + 1
+				s = events.select{|e| e[:type] != 'certification' && e[:type] != 'keysigning' && e[:type] != 'bof'}.count
                                 if s > 400
                                   s.to_s
                                 else
