--- a/layouts/main.html
+++ b/layouts/main.html
@@ -94,7 +94,7 @@ $layout_dateline ||= begin
                                 end
                               end
               {
-                'beer' => '/practical/covid/',
+                'beer' => '/practical/beer/',
               'devrooms' => '/schedule/tracks/',
               'open source' => 'https://en.wikipedia.org/wiki/Open-source_model',
               '8000+ hackers' => nil,
