--- a/layouts/schedule/event.html
+++ b/layouts/schedule/event.html
@@ -76,7 +76,7 @@
 %>
 <div class="video">
   <video preload="none" controls="controls">
-    <source src="<%= url %>" type='video/webm; codecs="vp9, opus"' />
+    <source src="<%= url %>" type='video/webm; codecs="av01.0.08M.08.0.110.01.01.01.0"' />
     <source src="<%= url.gsub(/\.webm$/, ".mp4") %>" type='video/mp4' />
   </video>
 </div>
