--- a/layouts/main.html
+++ b/layouts/main.html
@@ -52,7 +52,7 @@ $layout_dateline ||= begin
               <div class="input-prepend">
                 <span class="add-on"><i class="icon-search"></i></span>
                 <span class="degraded-hint">Search:</span>
-                <input type="text" name="q" id="q" class="span2" value="<% if @item[:search_inject_variable] %><%%= <%= @item[:search_inject_variable] %> %><% end %>" />
+                <input type="text" name="q" id="q" class="span2" value="<% if @item[:search_inject_variable] %><%%= <%= @item[:search_inject_variable] %> %><% end %>">
               </div>
             </form>
             </li>
