--- a/layouts/main.html
+++ b/layouts/main.html
@@ -149,7 +149,7 @@ $layout_dateline ||= begin
 
       <%= yield %>
     </div> <!-- #main -->
-    <div id="footer">
+    <footer>
       <div class="footer-holder">
         <div class="panel-block">
           <%
@@ -170,13 +170,13 @@ $layout_dateline ||= begin
         </div>
         <div class="license-info">
           <div class="license-info-logo"></div>
-          This work is licensed under the Creative Commons Attribution 2.0 Belgium Licence.<br/>
+          This work is licensed under the Creative Commons Attribution 2.0 Belgium Licence.<br>
           To view a copy of this licence, visit
-          <a class="quiet" rel="license" href="http://creativecommons.org/licenses/by/2.0/be/deed.en">http://creativecommons.org/licenses/by/2.0/be/deed.en</a><br/>
-          or send a letter to Creative Commons, 444 Castro Street, Suite 900, Mountain View, California, 94041, USA.<br />
+          <a class="quiet" rel="license" href="http://creativecommons.org/licenses/by/2.0/be/deed.en">http://creativecommons.org/licenses/by/2.0/be/deed.en</a><br>
+          or send a letter to Creative Commons, 444 Castro Street, Suite 900, Mountain View, California, 94041, USA.<br>
           All content such as talks and biographies is the sole responsibility of the speaker.
         </div>
       </div>
-    </div>
+    </footer>
   </body>
 </html>
