--- a/content/assets/style/parts/010_design.css
+++ b/content/assets/style/parts/010_design.css
@@ -11,7 +11,7 @@ h1 {
 	text-align: center;
 }
 
-h1, h2, h3, #footer, #header, .visual,
+h1, h2, h3, footer, #header, .visual,
 #main .s-block .text-block p,
 .news-list .date .frame,
 thead h4,
@@ -604,7 +604,7 @@ a.btn-purple:hover {
 	line-height:30px;
 }
 .developers-block .text-block p{margin:0 0 17px;}
-#footer{
+footer{
 	background:#efefef;
 	color:#5f5f5f;
 }
