--- a/content/assets/style/parts/010_design.css
+++ b/content/assets/style/parts/010_design.css
@@ -5,7 +5,13 @@ body{
 	font:14px/16px "DejaVu Sans", Arial, Helvetica, sans-serif;
 	background:#fff;
 }
-h1, h2, h3, #footer, #header, .visual,
+
+h1 {
+	text-transform: capitalize;
+	text-align: center;
+}
+
+h1, h2, h3, footer, #header, .visual,
 #main .s-block .text-block p,
 .news-list .date .frame,
 thead h4,
@@ -202,7 +208,6 @@ fieldset{
     background: #1e1e1e;
 }
 .info-box span{
-	color:#3b3b3b;
 	padding:0 9px 0 8px;
 	text-shadow:0 1px 0 #646464;
 }
@@ -598,7 +603,7 @@ a.btn-purple:hover {
 	line-height:30px;
 }
 .developers-block .text-block p{margin:0 0 17px;}
-#footer{
+footer{
 	background:#efefef;
 	color:#5f5f5f;
 }
