--- a/layouts/main.html
+++ b/layouts/main.html
@@ -95,7 +95,7 @@ $layout_dateline ||= begin
                               end
               {
                 'beer' => '/practical/beer/',
-              "#{ tracks.count } devrooms" => '/schedule/tracks/',
+              "#{ tracks.select{|t| t[:type] == 'devroom'}.count } devrooms" => '/schedule/tracks/',
               'open source' => 'https://en.wikipedia.org/wiki/Open-source_model',
               '8000+ hackers' => nil,
               'lightning talks' => '/schedule/track/lightning_talks/',
