style: more distinct sponsor name CSS classes

--- a/content/assets/style/parts/010_design.css
+++ b/content/assets/style/parts/010_design.css
@@ -279,6 +279,7 @@ a.btn-purple:hover {
 	display:inline-block;
 	vertical-align:middle;
 	padding:10px 0 0;
+	border:0;
 }
 *+html .logo-list li{display:inline;}
 .logo-list li {padding-right: 25px;}
