Don't show attachment type
Pretalx is not aware and all types are set to slides anyway (except
video, which is a link, not an attachment)

--- a/layouts/schedule/event.html
+++ b/layouts/schedule/event.html
@@ -117,7 +117,7 @@
                  'download'
                end
       %>
-      <li><i class="icon-<%= icon %>"></i> <a href="<%= ai.path %>"><%= title %> (<%= ai[:type] %>)</a></li>
+      <li><i class="icon-<%= icon %>"></i> <a href="<%= ai.path %>"><%= title %></a></li>
     <% end %>
   </ul>
 <% end %>
